--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #eeef6d; }
+  background: #68e8c2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f83879; }
+  background: #c4186a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #af36de; }
+  background: #b36912; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #562b0d; }
+  background: #784fa4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d26e7b; }
+  background: #f5f999; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b3b204; }
+  background: #4c9ee8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5791a0; }
+  background: #54089a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6a1789; }
+  background: #d48c3c; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4af389; }
+  background: #853334; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #0c2f69; }
+  background: #687125; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #76db5b; }
+  background: #b8911e; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c2a0d9; }
+  background: #46490f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #1d485e; }
+  background: #368e60; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #58477e; }
+  background: #6e3d13; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #397b14; }
+  background: #460a21; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #717d53; }
+  background: #4c3313; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #95b1d3; }
+  background: #604694; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d378d9; }
+  background: #8895e5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #446960; }
+  background: #83a9ff; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #391538; }
+  background: #12ea65; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #036882; }
+  background: #d0daf5; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bd12c6; }
+  background: #09cf12; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #077dbe; }
+  background: #44cc62; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #c33ab1; }
+  background: #8d4856; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #2185e0; }
+  background: #0a903c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #504b04; }
+  background: #ad6416; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9db11f; }
+  background: #95736d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #cfe8ee; }
+  background: #efc349; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #92ab4d; }
+  background: #fa6c0f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #05bc35; }
+  background: #64cbc8; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4baa0e; }
+  background: #c90402; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c0e841; }
+  background: #be33e5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8194b0; }
+  background: #7ba930; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1efa55; }
+  background: #b5f40b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e7c6d3; }
+  background: #8b47a2; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #49e90e; }
+  background: #c5afb6; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #ae86a2; }
+  background: #52bb1e; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #476b36; }
+  background: #9e1b17; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #0c3cd6; }
+  background: #79ef83; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a75d24; }
+  background: #ec1321; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #11ec53; }
+  background: #f7c9db; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6451a0; }
+  background: #cf6968; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #4e5c2b; }
+  background: #c4bba4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #8ce0cd; }
+  background: #d36072; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e449e1; }
+  background: #69d87d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6821bd; }
+  background: #25adb6; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1af27e; }
+  background: #9e7d22; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2bca1c; }
+  background: #d71c87; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8c132b; }
+  background: #9254d0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #701970; }
+  background: #38e316; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #de63ec; }
+  background: #ee4b5c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ff7ff1; }
+  background: #81a59a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #dbb1ed; }
+  background: #9a3b02; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b7240f; }
+  background: #576922; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f11124; }
+  background: #89f16c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d82b46; }
+  background: #952144; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #396d44; }
+  background: #d073eb; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e9cfef; }
+  background: #8d9f15; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #0465fd; }
+  background: #d87ec5; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2d98a6; }
+  background: #940c1d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #add640; }
+  background: #b8f761; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #76734d; }
+  background: #95bd9a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c4ce14; }
+  background: #fed5a7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7ea795; }
+  background: #db963d; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fb7ed2; }
+  background: #7a62dc; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #50dcf7; }
+  background: #115358; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e83b68; }
+  background: #d5eae6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0cbbae; }
+  background: #2dbfe7; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #d5cd35; }
+  background: #eee550; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4e29ca; }
+  background: #877f4e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #55d424; }
+  background: #7c3db0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #321e75; }
+  background: #f776dc; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a6e854; }
+  background: #24184f; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4d2bab; }
+  background: #e98136; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d99f81; }
+  background: #212b4a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f2bc60; }
+  background: #49de3d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7c562c; }
+  background: #a83812; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #24972f; }
+  background: #259174; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6ff81d; }
+  background: #9db24a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #a1deb7; }
+  background: #58810a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #56cee7; }
+  background: #8e57ce; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c7a380; }
+  background: #e9d496; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #afa769; }
+  background: #a9ac2f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #8388e8; }
+  background: #26c692; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #daa042; }
+  background: #846f24; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b3b5fa; }
+  background: #54e52f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c30dc5; }
+  background: #390574; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5cb035; }
+  background: #ec9785; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1413f7; }
+  background: #74fed2; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #c09417; }
+  background: #32501e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #400d0e; }
+  background: #4d06db; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c0a6e2; }
+  background: #a6d74d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #85122a; }
+  background: #bf4aa0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #765a9f; }
+  background: #af3710; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c0532d; }
+  background: #c30560; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c012c9; }
+  background: #6c9d21; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #aa44af; }
+  background: #3ea127; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1a7b19; }
+  background: #6db0b6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b20f42; }
+  background: #7a98ca; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d73024; }
+  background: #1596b5; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11311,6 +11311,12 @@ input:checked + .sliders:before {
 
 .td-wrapper {
   margin-bottom: 20px; }
+
+.adapter-config-wrapper .add-edit-connection-btns a {
+  margin-right: 20px; }
+
+.adapter-config-wrapper .parent-row .table-innerbox {
+  padding: 3px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
