--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -782,3 +782,7 @@ input:checked+.sliders:before {
 .adapter-config-wrapper .add-edit-connection-btns a {
     margin-right: 20px;
 }
+
+.adapter-config-wrapper .parent-row .table-innerbox {
+    padding: 3px;
+}
