--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #68e8c2; }
+  background: #193fb6; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c4186a; }
+  background: #365abd; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b36912; }
+  background: #53550e; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #784fa4; }
+  background: #599ba8; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f5f999; }
+  background: #9d349a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #4c9ee8; }
+  background: #f4ff9c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #54089a; }
+  background: #1de3cb; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d48c3c; }
+  background: #3e3990; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #853334; }
+  background: #988b0b; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #687125; }
+  background: #baf025; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b8911e; }
+  background: #7f3aef; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #46490f; }
+  background: #37f67b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #368e60; }
+  background: #d3f2ea; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #6e3d13; }
+  background: #d108f0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #460a21; }
+  background: #1c0f5c; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #4c3313; }
+  background: #2ee6dd; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #604694; }
+  background: #a795d6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8895e5; }
+  background: #260c07; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #83a9ff; }
+  background: #73f95f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #12ea65; }
+  background: #3380ad; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #d0daf5; }
+  background: #abbd4d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #09cf12; }
+  background: #624857; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #44cc62; }
+  background: #4fb9fa; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8d4856; }
+  background: #386295; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0a903c; }
+  background: #712c64; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #ad6416; }
+  background: #3180c6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #95736d; }
+  background: #3efaf2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #efc349; }
+  background: #3eac7a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #fa6c0f; }
+  background: #5f9ccc; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #64cbc8; }
+  background: #82dfbb; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #c90402; }
+  background: #943636; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #be33e5; }
+  background: #03a54f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #7ba930; }
+  background: #9b5676; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b5f40b; }
+  background: #1838ff; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #8b47a2; }
+  background: #ee8189; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c5afb6; }
+  background: #2d6cf1; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #52bb1e; }
+  background: #bdf084; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9e1b17; }
+  background: #4410c0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #79ef83; }
+  background: #afd959; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #ec1321; }
+  background: #2b831c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f7c9db; }
+  background: #f5f688; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cf6968; }
+  background: #ad1113; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c4bba4; }
+  background: #90418a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d36072; }
+  background: #4ff50f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #69d87d; }
+  background: #526a82; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #25adb6; }
+  background: #6e0acf; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9e7d22; }
+  background: #2123ec; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d71c87; }
+  background: #86b029; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #9254d0; }
+  background: #44cf45; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #38e316; }
+  background: #b606d2; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ee4b5c; }
+  background: #6614d4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #81a59a; }
+  background: #dfea07; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9a3b02; }
+  background: #6df77c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #576922; }
+  background: #de32cd; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #89f16c; }
+  background: #4a4fed; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #952144; }
+  background: #d7ea63; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d073eb; }
+  background: #722ed7; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8d9f15; }
+  background: #53c482; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d87ec5; }
+  background: #b73492; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #940c1d; }
+  background: #167345; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b8f761; }
+  background: #b21523; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #95bd9a; }
+  background: #3529df; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #fed5a7; }
+  background: #ffe37a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #db963d; }
+  background: #07c0c9; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7a62dc; }
+  background: #38cf21; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #115358; }
+  background: #dbafd6; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d5eae6; }
+  background: #5197a3; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2dbfe7; }
+  background: #78ec4f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #eee550; }
+  background: #488968; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #877f4e; }
+  background: #73d874; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #7c3db0; }
+  background: #a254e2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f776dc; }
+  background: #c5ea75; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #24184f; }
+  background: #b81fc2; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e98136; }
+  background: #9ee2b6; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #212b4a; }
+  background: #c24420; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #49de3d; }
+  background: #25e7c4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a83812; }
+  background: #8de66f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #259174; }
+  background: #7d0ef3; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #9db24a; }
+  background: #32628c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #58810a; }
+  background: #842f63; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8e57ce; }
+  background: #cc51eb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e9d496; }
+  background: #1a9820; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #a9ac2f; }
+  background: #f7e79b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #26c692; }
+  background: #5fef45; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #846f24; }
+  background: #18c504; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #54e52f; }
+  background: #69d030; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #390574; }
+  background: #84d626; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ec9785; }
+  background: #acc94d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #74fed2; }
+  background: #efdc3c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #32501e; }
+  background: #25d0da; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4d06db; }
+  background: #269710; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a6d74d; }
+  background: #1b595a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bf4aa0; }
+  background: #946182; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #af3710; }
+  background: #97f4ba; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c30560; }
+  background: #87d1e4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6c9d21; }
+  background: #ffd8d0; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #3ea127; }
+  background: #da02d6; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6db0b6; }
+  background: #8186e6; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #7a98ca; }
+  background: #6c676b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #1596b5; }
+  background: #97b0f7; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11316,7 +11316,22 @@ input:checked + .sliders:before {
   margin-right: 20px; }
 
 .adapter-config-wrapper .parent-row .table-innerbox {
-  padding: 3px; }
+  padding-bottom: 3px; }
+
+.head-input {
+  display: flex;
+  justify-content: center;
+  height: auto !important;
+  width: auto !important; }
+
+.connector-config-row {
+  border-radius: 15px; }
+
+.add-edit-connection-heading-row .add-edit-heading {
+  font-weight: normal !important; }
+
+.connector-config-row .form-control {
+  height: calc(1.5em + 0.50rem + 2px) !important; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -11462,7 +11477,29 @@ input:checked + .sliders:before {
     text-align: center; }
 
   .modal-add-connections-wrapper .theme-btn {
-    width: 100% !important; } }
+    width: 100% !important; }
+
+  .adapter-config-wrapper .inner-tab-right-section {
+    margin-top: 10px; }
+
+  .add-edit-connection-heading-row {
+    display: flex;
+    align-items: inherit;
+    margin-top: 25px;
+    flex-direction: column; }
+
+  .add-edit-connection-heading-row .add-edit-heading {
+    order: 2;
+    margin: 50px 0px 0px; }
+
+  .add-edit-connection-heading-row .add-edit-connection-btns {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center; }
+
+  .last-td-p {
+    padding-right: 15px; } }
 /*767 screen end here*/
 @media screen and (max-width: 767px) {
   .query-wizard-div-box {
